backend/gateway/http.yaml
admin:
  access_log_path: /tmp/admin_access.log
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 9900

static_resources:
  listeners:
    - name: gateway_listener
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 8080
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: ingress_gateway
                http2_protocol_options: {}
                route_config:
                  name: gateway_route
                  virtual_hosts:
                    - name: allbackend_cluster
                      domains: ["*"]
                      routes:
                        - match:
                            prefix: "/admin"
                          direct_response:
                            status: 403
                            body:
                              inline_string: "Forbidden!"
                        - match:
                            prefix: "/user"
                          route:
                            cluster: user_service_sidecar
                            grpc: {}
                        - match:
                            prefix: "/post"
                          route:
                            cluster: post_service_sidecar
                            grpc: {}
                        - match:
                            prefix: "/connections"
                          route:
                            cluster: connections_service_sidecar
                            grpc: {}
                http_filters:
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router

  clusters:
    - name: user_service_sidecar
      type: EDS
      eds_cluster_config:
        eds_config:
          api_config_source:
            api_type: GRPC
            grpc_services:
              - envoy_grpc:
                  cluster_name: consul_xds
      connect_timeout: 1s
      lb_policy: ROUND_ROBIN
      http2_protocol_options: {}
      health_checks:
        - timeout: 1s
          interval: 5s
          unhealthy_threshold: 3
          healthy_threshold: 2
          grpc_health_check: {}

    - name: post_service_sidecar
      type: EDS
      eds_cluster_config:
        eds_config:
          api_config_source:
            api_type: GRPC
            grpc_services:
              - envoy_grpc:
                  cluster_name: consul_xds
      lb_policy: ROUND_ROBIN
      http2_protocol_options: {}

    - name: connections_service_sidecar
      type: EDS
      eds_cluster_config:
        eds_config:
          api_config_source:
            api_type: GRPC
            grpc_services:
              - envoy_grpc:
                  cluster_name: consul_xds
      lb_policy: ROUND_ROBIN
      http2_protocol_options: {}

    - name: consul_xds
      type: STRICT_DNS
      connect_timeout: 1s
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: consul_xds
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: consul-server
                      port_value: 8502
